# NFT-Creation

./: .gitignore  README.md  main.py  methods.py  px-images.py  px_images.py  pyproject.toml  requirements.txt  scrape_images.py
findfaces/: encode_faces.py  face_replacement.py  recognize_faces.py
resources/: application.properties  encodings.pickle
transformation/: colour_images.py  face-images.py  mix_images.py  px_images.py
