[tool.poetry]
name = "nft-creation"
version = "0.1.0"
description = ""
authors = ["alexisleveratto <alexis.leveratto@gmail.com>"]
readme = "README.md"
packages = [{include = "nft_creation"}]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
dlib = "^19.24.0"
face-recognition = "^1.3.0"
face-recognition-models = "^0.3.0"
imutils = "^0.5.4"
numpy = "^1.23.3"
opencv-python = "^4.6.0.6"
Pillow = "^9.2.0"
scikit-learn = "^1.1.2"
selenium = "^4.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
